@@ -1,14 +1,16 @@
 package com.meow.bebrablender.objreader;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import com.meow.bebrablender.math.vectors.Vector2f;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 class ObjReaderTextureTest {
-    private final ObjReader reader = new ObjReader(null);
+    private final ObjReader reader = new ObjReader(Path.of("src/main/resources/com/meow/bebrablender/ObjFiles/Null.obj"));
 
     ObjReaderTextureTest() throws IOException {
     }
@@ -17,7 +19,7 @@ class ObjReaderTextureTest {
     void testParseVertex2f01() {
         ArrayList<String> wordsInLineWithoutToken = new ArrayList<>(Arrays.asList("1.01", "1.02"));
         Vector2f result = reader.parseTextureVertex(wordsInLineWithoutToken, 5);
-        Vector2f expectedResult = new Vector2f(1.01f, 1.02f);
+        Vector2f expectedResult = new Vector2f(1.01, 1.02);
         Assertions.assertEquals(result, expectedResult);
     }
 
@@ -25,7 +27,7 @@ class ObjReaderTextureTest {
     void testParseVertex2f02() {
         ArrayList<String> wordsInLineWithoutToken = new ArrayList<>(Arrays.asList("1.01", "1.03"));
         Vector2f result = reader.parseTextureVertex(wordsInLineWithoutToken, 5);
-        Vector2f expectedResult = new Vector2f(1.01f, 1.10f);
+        Vector2f expectedResult = new Vector2f(1.01, 1.10);
         Assertions.assertNotEquals(result, expectedResult);
     }
 
@@ -36,14 +38,14 @@ class ObjReaderTextureTest {
             reader.parseTextureVertex(wordsInLineWithoutToken, 10);
             Assertions.fail();
         } catch (ObjReaderException exception) {
-            String expectedError = "Error parsing OBJ file on line: 10. Failed to parse float value.";
+            String expectedError = "Error parsing OBJ file on line: 10. Failed to parse double value.";
             Assertions.assertEquals(expectedError, exception.getMessage());
         }
     }
 
     @Test
     void testParseVertex2f04() {
-        ArrayList<String> wordsInLineWithoutToken = new ArrayList<>(Arrays.asList("1.0"));
+        ArrayList<String> wordsInLineWithoutToken = new ArrayList<>(List.of("1.0"));
         try {
             reader.parseTextureVertex(wordsInLineWithoutToken, 10);
             Assertions.fail();
